[package]
name = "n42-mobile"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
# bls={path="/Users/root1/Desktop/starlink/lighthouse/crypto/bls"}
keystore = { path = "../keystore" }
n42-withdrawals.workspace=true
rand.workspace=true
yansi="1.0.1"
foldhash="0.1.5"
# tokio_tungstenite="1.0"
tokio-tungstenite = "0.21"
anyhow="1.0.98"
serde_json="1.0.140"
n42-engine-types.workspace=true
jsonrpsee.workspace=true
futures-util.workspace=true
tracing.workspace=true
tracing-subscriber.workspace=true
tokio.workspace=true
reth-revm.workspace=true
lazy_static.workspace=true
reth-provider.workspace=true
reth-chainspec.workspace=true
reth-evm.workspace=true
reth-evm-ethereum.workspace=true
alloy-consensus.workspace=true
revm-primitives.workspace=true
reth-primitives.workspace=true
alloy-eips.workspace=true
reth-consensus.workspace=true
reth-ethereum-consensus.workspace=true
# alloy-primitives.workspace=true
alloy-primitives-v0 = { package = "alloy-primitives", version = "0.8.25" }
alloy-primitives-v1 = { package = "alloy-primitives", version = "1.1.2" }
reth-primitives-traits.workspace=true
reth-ethereum-primitives.workspace=true
reqwest.workspace=true

[[bin]]
name = "mobile"
path = "src/main.rs"

[lints]
workspace = true
