[package]
name = "n42-testing-util"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
n42-clique.workspace = true
bytes.workspace = true
rand.workspace = true
secp256k1  = { workspace = true, features = ["recovery"] }
alloy-primitives.workspace = true
alloy-genesis.workspace = true
reth-primitives = { workspace = true, default-features = false, features = ["std", "reth-codec", "arbitrary"] }
reth-provider.workspace = true
reth-blockchain-tree.workspace = true
reth-chainspec.workspace = true
reth-transaction-pool = { workspace = true, features = ["test-utils"] }
reth-evm = { workspace = true, features = ["test-utils"] }
reth-consensus.workspace = true
reth-db = { workspace = true, features = ["test-utils"] }
reth-db-common.workspace = true
reth-network.workspace = true
eyre.workspace = true
reth-node-ethereum.workspace = true


[lints]
workspace = true
