[package]
name = "n42-testing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reth-testing-utils.workspace = true

[lints]
workspace = true
