[package]
name = "n42-testing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
#n42
n42-clique.workspace = true
n42-engine-types.workspace = true
n42-engine-primitives.workspace = true

# reth
reth-ethereum-forks.workspace = true
reth-primitives-traits.workspace = true
reth-payload-primitives.workspace = true
reth-payload-builder.workspace = true
reth-ethereum-engine-primitives.workspace = true
reth-basic-payload-builder.workspace = true
reth-ethereum-payload-builder.workspace = true
reth-node-builder.workspace = true
reth-tracing.workspace = true
reth-provider.workspace = true
reth-transaction-pool.workspace = true
reth-network.workspace = true
reth-evm.workspace = true
reth-evm-ethereum.workspace = true
reth-consensus.workspace = true
reth-rpc.workspace = true
reth-rpc-api = { workspace = true, features = ["client"] }
reth-node-api.workspace = true
reth-chainspec.workspace = true
reth-primitives.workspace = true
reth-revm = { workspace = true, features = ["std"] }
reth-trie-db.workspace = true

# revm with required ethereum features
revm = { workspace = true, features = ["secp256k1", "blst", "c-kzg"] }

reth-node-ethereum.workspace = true

# misc
eyre.workspace = true

secp256k1  = { workspace = true, features = ["recovery"] }
zerocopy = "0.7.35"
hex = "0.4"
tiny-keccak = "2.0"

reth.workspace = true
reth-db.workspace = true
reth-exex.workspace = true
reth-tasks.workspace = true
futures.workspace = true
alloy-primitives.workspace = true
alloy-genesis.workspace = true
alloy-signer-local.workspace = true
tokio.workspace = true
serde_json.workspace = true
alloy-consensus.workspace = true
alloy-provider.workspace = true
rand.workspace = true
alloy-signer.workspace = true
alloy-eips.workspace = true
alloy-sol-types.workspace = true
alloy-contract.workspace = true
alloy-rpc-types-beacon.workspace = true

[dev-dependencies]
reth.workspace = true
reth-chainspec.workspace = true
reth-db.workspace = true
reth-exex.workspace = true
reth-node-api.workspace = true
#reth-e2e-test-utils.workspace = true
reth-tasks.workspace = true
futures.workspace = true
alloy-primitives.workspace = true
alloy-genesis.workspace = true
tokio.workspace = true
serde_json.workspace = true
alloy-consensus.workspace = true
alloy-provider.workspace = true
rand.workspace = true
alloy-signer.workspace = true
alloy-eips.workspace = true
alloy-sol-types.workspace = true
alloy-contract.workspace = true
alloy-rpc-types-beacon.workspace = true

