[package]
name = "n42-withdrawals"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
alloy-primitives.workspace = true
thiserror = "2.0.6"
ethereum_ssz_derive = "0.7"
tree_hash_derive = "0.8"
milhouse = "0.3"
ssz_types = "0.8"
superstruct = "0.8"
derivative = "2"
tree_hash = "0.8"





[lints]
workspace = true
