[package]
name = "n42-withdrawals"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
alloy-primitives.workspace = true
compare_fields_derive = { path = "compare_fields_derive"}
test_random_derive = { path = "test_random_derive"}
thiserror = "2.0.6"
ethereum_ssz_derive = "0.7"
tree_hash_derive = "0.8"
milhouse = "0.3"
ssz_types = "0.8"
superstruct = "0.8"
derivative = "2"
tree_hash = "0.8"
metastruct = "0.1.0"
serde = { version = "1.0.219", features = ["derive"] }
ethereum_ssz = "0.7"






[lints]
workspace = true


[features]
fake_crypto = []