[package]
name = "n42-primitives"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
ethereum_ssz.workspace = true
ethereum_ssz_derive.workspace = true
arbitrary.workspace = true
integer-sqrt.workspace = true
thiserror.workspace = true
alloy-eips.workspace = true
alloy-sol-types.workspace = true
eyre.workspace = true
serde_json.workspace=true
#reth
reth-primitives = { workspace = true, default-features = false, features = ["std","arbitrary"] }
reth-primitives-traits.workspace = true
alloy-rlp.workspace = true
alloy-primitives.workspace = true
reth-codecs.workspace = true

# arbitrary utils
# arbitrary = { workspace = true, features = ["derive"], optional = true }
# arbitrary.workspace=true
# serde
serde.workspace = true
# log
tracing.workspace = true
#
schnellru.workspace = true

bytes.workspace=true

secp256k1.workspace=true
[lints]
workspace = true
